song_switcher_www/src/style.sass
$alt-bg:  #2e2e2e
$margin:  20px
$padding: 10px

html, body, .vlayout
  height: 100%
  margin: 0

body
  background-color: black
  box-sizing: border-box
  color: white
  font-family: sans-serif
  font-size: 50px
  padding: ($margin - $padding) $margin 0 $margin
  text-align: center
  user-select: none

div
  cursor: default
  padding: $padding 0 $padding 0

.vlayout
  display: flex
  flex-direction: column
  justify-content: space-between

  & > *
    flex-shrink: 0
    margin-bottom: $padding

.hlayout
  align-items: center
  display: flex

.vlayout, .hlayout, #controls, #song_box
  padding: 0

#song_box
  flex-grow: 1
  word-wrap: break-word

  /* min-width fixes this flexbox overflow issue with word-wrap on firefox
      https://bugzilla.mozilla.org/show_bug.cgi?id=1136818 */
  min-width: $padding

  span
    display: block

  input
    background-color: $alt-bg
    border-style: none
    color: inherit
    display: none
    font-size: inherit
    text-align: inherit
    width: 100%

  &.edit
    span
      display: none

    input
      display: block

#prev, #next
  min-width: 50px
  border: none

.button
  border: 1px white solid
  padding: $padding

  &:hover:not(.active)
    background-color: $alt-bg

  &:active:not(.active)
    background-color: #3c5a64
    color: inherit

#play
  font-size: 0.7em

  &.active
    background-color: #7ca5d7
    color: black

#timeline, noscript
  $height: 100px
  height: $height
  line-height: $height
  width: 100%

body:not(.js) #timeline
  display: none

#footer
  align-items: flex-end
  font-size: 12px

  .button
    padding: $padding ($padding * 1.5) $padding ($padding * 1.5)
    margin-right: $padding

#about
  flex-grow: 1
  padding: 0
  text-align: right

noscript, .invalid
  background-color: red

.hidden
  visibility: hidden

a
  color: #7ca5d7

@media (max-height: 425px)
  .spacer
    display: none

@media (max-height: 320px)
  body
    font-size: 40px

  #timeline
    height: 80px

